# ChatBot

./: .gitignore  Makefile  README.md  install.sh  main.py  pyproject.toml  requirements.txt  run.sh
src/: chatbot.py  config.py  llm.py  vector_database.py
tests/: test_chatbot.py
